--- a/package.json
+++ b/package.json
@@ -29,9 +29,8 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.1.4",
-    "typescript": "2.0.9",
-    "@ionic/cli-plugin-cordova": "0.0.9",
-    "@ionic/cli-build-ionic-angular": "0.0.3"
+    "typescript": "2.0.9"
+    
   },
   "version": "0.0.1",
   "description": "Grupo2 project"
